--- a/src/app/pages/ordermonitor/ordermonitor.component.html
+++ b/src/app/pages/ordermonitor/ordermonitor.component.html
@@ -30,9 +30,10 @@
                 <td class="text-center">{{ order.location }}</td>
                 <td>
                   <div class="row">
-                    <div class="col col-md-4"><button type="button" class="btn btn-primary btn-block" (click)="openOrderDetail(order)">ກວດສອບລາຍການ</button></div>
-                    <div class="col col-md-4"><button type="button" class="btn btn-success btn-block" (click)="completeOrder(order.id, order.ticketId)">ສົ່ງແລ້ວ</button></div>
-                    <div class="col col-md-4"><button type="button" class="btn btn-danger btn-block" (click)="cancelOrder(order.id, order.ticketId)">ຍົກເລີກ</button></div>
+                    <div class="col col-md-3"><button type="button" class="btn btn-primary btn-block btn-cmd" (click)="openOrderDetail(order)">ກວດສອບລາຍການ</button></div>
+                    <div class="col col-md-3"><button type="button" class="btn btn-warning btn-block btn-cmd" (click)="recieveFromKt(order.id, order.ticketId)">ຮັບຈາກຄົວແລ້ວ</button></div>
+                    <div class="col col-md-3"><button type="button" class="btn btn-success btn-block btn-cmd" (click)="completeOrder(order.id, order.ticketId)">ສົ່ງແລ້ວ</button></div>
+                    <div class="col col-md-3"><button type="button" class="btn btn-danger btn-block btn-cmd" (click)="cancelOrder(order.id, order.ticketId)">ຍົກເລີກ</button></div>
                   </div>
                 </td>
               </tr>
