update change password

--- a/src/app/dialogs/first-login/first-login.component.css
+++ b/src/app/dialogs/first-login/first-login.component.css
@@ -2,13 +2,10 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, 'phetsarath ot';
 }
 
-.food-name {
-  margin-right: 15px;
-}
 .card-header {
   background-color: black;
   color: white;
 }
-.card-main {
-  width: 50vw;
+.hidden {
+  display: none;
 }
