--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -1,7 +1,7 @@
 <div class="card shadow-sm p-3 mb-5 bg-white rounded">
   <div class="card-body">
     <div class="h4">
-      ສະຫຼຸບຍອດຂາຍຂອງວັນທີ {{ date | date: 'dd-mm-yyyy'}}
+      ສະຫຼຸບຍອດຂາຍຂອງວັນທີ {{ date | date: 'dd-MM-yyyy'}}
     </div>
     <div class="card">
       <div class="card-body">
