--- a/src/app/pages/foods/foods.component.html
+++ b/src/app/pages/foods/foods.component.html
@@ -174,6 +174,7 @@
             <div class="row food_type-div">
               <input type="text" required class="form-control col col-md-8" formControlName="food_name" id="txt_food_name"
                 placeholder="ຊື່ອາຫານ">
+
               <input type="file" style="display: none" (change)="uploadFile($event)" #fileInput>
               <span class="float-mr col col-md-2 ">
                 <i class="material-icons add-icon " (click)="fileInput.click()">
@@ -184,6 +185,11 @@
                 <img [src]="photo" class="w-100">
               </div>
             </div>
+          </div>
+          <div class="form-group">
+            <label for="txt_food_name_en">ຊື່ອາຫານ ພາສາອັງກິດ</label>
+            <input type="text" required class="form-control col col-md-8" formControlName="food_name_en" id="txt_food_name_en"
+              placeholder="English Food name">
           </div>
           <div class="form-group">
             <label for="masterFoodSelect">ປະເພດ</label>
