--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -6,7 +6,7 @@
     <div class="card">
       <div class="card-body">
         <div class="row">
-          <div class="col col-md-4">
+          <div class="col col-md-3">
             <div class="card shadow-sm  rounded">
               <div class="card-header">
                 ຍອດຂາຍ ແບ່ງຕາມຄົວ
@@ -31,7 +31,7 @@
               </div>
             </div>
           </div>
-          <div class="col col-md-4">
+          <div class="col col-md-3">
             <div class="card shadow-sm rounded">
               <div class="card-header">
                 ຍອດຂາຍ ແບ່ງຕາມ ປະເພດອາຫານ
@@ -40,7 +40,7 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th scope="col">ຄົວ</th>
+                      <th scope="col">ປະເພດອາຫານ</th>
                       <th class="text-right" scope="col">ຈຳນວນ</th>
                       <th class="text-right" scope="col">ຍອດຂາຍ</th>
                     </tr>
@@ -56,8 +56,8 @@
               </div>
             </div>
           </div>
-          <div class="col col-md-4"></div>
-          <div class="col col-md-4"></div>
+          <div class="col col-md-3"></div>
+          <div class="col col-md-3"></div>
         </div>
       </div>
     </div>
