update add sub food disable btn

--- a/src/app/dialogs/common-dialog/common-dialog.component.html
+++ b/src/app/dialogs/common-dialog/common-dialog.component.html
@@ -97,5 +97,5 @@
 
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="updateFood()">ບັນທຶກ</button>
+  <button type="button" class="btn btn-outline-dark" [disabled]="saveButtonEnable" (click)="updateFood()">ບັນທຶກ</button>
 </div>
