--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -1,8 +1,9 @@
-<div class="card shadow-sm p-3 mb-5 bg-white rounded">
+<div class="card shadow-sm rounded">
+  <div class="card-header">
+    ສະຫຼຸບຍອດຂາຍຂອງວັນທີ {{ date | date: 'dd-MM-yyyy'}}
+  </div>
   <div class="card-body">
-    <div class="h4">
-      ສະຫຼຸບຍອດຂາຍຂອງວັນທີ {{ date | date: 'dd-MM-yyyy'}}
-    </div>
+
     <div class="card">
       <div class="card-body">
         <div class="row">
@@ -56,7 +57,31 @@
               </div>
             </div>
           </div>
-          <div class="col col-md-3"></div>
+          <div class="col col-md-3">
+            <div class="card shadow-sm rounded">
+              <div class="card-header">
+                ອາຫານທີ່ຍອດຈຳນວນການຂາຍສູງສຸດ 10 ອັນດັບ
+              </div>
+              <div class="card-body">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col">ປະເພດອາຫານ</th>
+                      <th class="text-right" scope="col">ຈຳນວນ</th>
+                      <th class="text-right" scope="col">ຍອດຂາຍ</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let item of topFoods">
+                      <th class="text-left">{{ item.food_name }}</th>
+                      <td class="text-right">{{ item.count }}</td>
+                      <td class="text-right">{{ item.total | number}}</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
           <div class="col col-md-3"></div>
         </div>
       </div>
