--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -25,7 +25,7 @@
                     <tr *ngFor="let item of reportByKitchen">
                       <th class="text-left">{{ item.kitchen_name }}</th>
                       <td class="text-right">{{ item.count }}</td>
-                      <td class="text-right">{{ item.total | number}}</td>
+                      <td class="text-right">{{ item.cost | number}}</td>
                     </tr>
                   </tbody>
                 </table>
@@ -50,7 +50,7 @@
                     <tr *ngFor="let item of resportByFoodType">
                       <th class="text-left">{{ item.food_type_desc_la }}</th>
                       <td class="text-right">{{ item.count }}</td>
-                      <td class="text-right">{{ item.total | number}}</td>
+                      <td class="text-right">{{ item.cost | number}}</td>
                     </tr>
                   </tbody>
                 </table>
@@ -75,7 +75,7 @@
                     <tr *ngFor="let item of topFoods">
                       <th class="text-left">{{ item.food_name }}</th>
                       <td class="text-right">{{ item.count }}</td>
-                      <td class="text-right">{{ item.total | number}}</td>
+                      <td class="text-right">{{ item.cost | number}}</td>
                     </tr>
                   </tbody>
                 </table>
