--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -18,6 +18,7 @@
                     <tr>
                       <th scope="col">ຄົວ</th>
                       <th class="text-right" scope="col">ຈຳນວນ</th>
+                      <th class="text-right" scope="col">ທຶນ</th>
                       <th class="text-right" scope="col">ຍອດຂາຍ</th>
                     </tr>
                   </thead>
@@ -25,7 +26,7 @@
                     <tr *ngFor="let item of reportByKitchen">
                       <th class="text-left">{{ item.kitchen_name }}</th>
                       <td class="text-right">{{ item.count }}</td>
-                      <td class="text-right">{{ item.cost | number}}</td>
+                      <td class="text-right">{{ item.price }}</td>
                     </tr>
                   </tbody>
                 </table>
