--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -45,7 +45,8 @@
                     <tr *ngFor="let item of reportByKitchen">
                       <th class="text-left">{{ item.kitchen_name }}</th>
                       <td class="text-right">{{ item.count }}</td>
-                      <td class="text-right">{{ item.price }}</td>
+                      <td class="text-right">{{ item.cost | number}}</td>
+                      <td class="text-right">{{ item.total | number}}</td>
                     </tr>
                   </tbody>
                 </table>
