--- a/src/app/pages/kitchen-reports/kitchen-reports.component.html
+++ b/src/app/pages/kitchen-reports/kitchen-reports.component.html
@@ -65,7 +65,7 @@
                     <tr>
                       <th scope="col">ປະເພດອາຫານ</th>
                       <th class="text-right" scope="col">ຈຳນວນ</th>
-                      <th class="text-right" scope="col">ທຶນ</th>
+                      <th class="text-right" scope="col">ລວມ</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -90,7 +90,7 @@
                     <tr>
                       <th scope="col">ປະເພດອາຫານ</th>
                       <th class="text-right" scope="col">ຈຳນວນ</th>
-                      <th class="text-right" scope="col">ທຶນ</th>
+                      <th class="text-right" scope="col">ລວມ</th>
                     </tr>
                   </thead>
                   <tbody>
