--- a/src/app/pages/cashdrawer-manager/cashdrawer-manager.component.html
+++ b/src/app/pages/cashdrawer-manager/cashdrawer-manager.component.html
@@ -1,3 +1,55 @@
-<p>
-  cashdrawer-manager works!
-</p>
+<div class="container">
+  <form [formGroup]="cashloadForm">
+    <div class="card">
+      <div class="card-header bg-dark">
+        <a class="h6">ເອົາເງິນເຂົ້າ Cashdrawer</a>
+      </div>
+      <div class="card-body">
+
+        <div class="form-group row">
+          <label for="startAmounttxt" class="col-sm-3 col-form-label">ເອົາເງິນເຂົ້າ ຈຳນວນ</label>
+          <div class="col-sm-6">
+            <input type="number" class="form-control" id="startAmounttxt" step="10000" placeholder="ຈຳນວນ" (keyup)="loadCashAmountChange($event.target.value)">
+          </div>
+          <div class="col-sm-3">
+            <button type="button" [disabled]="!btnDisabled" (click)="processLoadCash()" class="btn btn-primary">ບັນທຶກເງິນສົດ</button>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="card" [ngClass]="showBox">
+      <div class="card-body">
+        <div class="form-group row">
+          <label for="saleTotalAmount" class="col-sm-3 col-form-label">ຍອດຂາຍລ່າສຸດ</label>
+          <div class="col-sm-6">
+            <input type="number" readonly class="form-control" id="saleTotalAmount" placeholder="Auto populate ...">
+          </div>
+          <div class="col-sm-3">
+            <button type="button" class="btn btn-danger">ປິດການຂາຍຂອງວັນ</button>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="saleTotalAmount" class="col-sm-3 col-form-label">ຈຳນວນເງິນທີ່ຍັງໃນ Drawer</label>
+          <div class="col-sm-6">
+            <input type="number" class="form-control" id="saleTotalAmount" step="10000">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="saleTotalAmount" class="col-sm-3 col-form-label">ຍອດເງິນຫຼັງປິດການຂາຍຂອງວັນ</label>
+          <div class="col-sm-6">
+            <input type="number" readonly class="form-control" id="saleTotalAmount" step="10000">
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="col-sm-3">
+
+          </div>
+          <div class="col-sm-6">
+            <button type="button" class="btn btn-lg btn-primary">ບັນທຶກເງິນສົດ</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
