--- a/src/app/pages/kitchen-reports/kitchen-reports.component.html
+++ b/src/app/pages/kitchen-reports/kitchen-reports.component.html
@@ -1,6 +1,6 @@
 <div class="card shadow-sm rounded">
   <div class="card-header">
-    ສະຫຼຸບຍອດຂາຍຂອງວັນທີ {{ date | date: 'dd-MM-yyyy'}}
+    ສະຫຼຸບຍອດຂາຍ
   </div>
   <div class="card-body">
     <div class="card">
@@ -9,7 +9,7 @@
           <form class="form-inline">
             <div class="form-group">
               <div class="input-group">
-                <input class="form-control" placeholder="yyyy-mm-dd" name="dp" [(ngModel)]="DatepickerModel"
+                <input class="form-control time-div" placeholder="yyyy-mm-dd" name="dp" [(ngModel)]="DatepickerModel"
                   ngbDatepicker #d="ngbDatepicker">
                 <div class="input-group-append">
                   <button class="btn btn-outline-secondary" (click)="d.toggle()" type="button">
