--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -1,6 +1,6 @@
 <div class="card shadow-sm rounded">
   <div class="card-header">
-    ສະຫຼຸບຍອດຂາຍຂອງວັນທີ {{ date | date: 'dd-MM-yyyy'}}
+    <h4>ສະຫຼຸບຍອດຂາຍ</h4>
   </div>
   <div class="card-body">
     <div class="card">
@@ -9,13 +9,23 @@
           <form class="form-inline">
             <div class="form-group">
               <div class="input-group">
-                <input class="form-control" placeholder="yyyy-mm-dd" name="dp" [(ngModel)]="DatepickerModel"
-                  ngbDatepicker #d="ngbDatepicker">
+                <input class="form-control time-div" placeholder="yyyy-mm-dd" name="dpst" [(ngModel)]="StartDatepickerModel"
+                  ngbDatepicker #st="ngbDatepicker">
                 <div class="input-group-append">
-                  <button class="btn btn-outline-secondary" (click)="d.toggle()" type="button">
+                  <button class="btn btn-outline-secondary btn-lg" (click)="st.toggle()" type="button">
                     <img src="../../../assets/images/calendar.svg">
                   </button>
                 </div>
+
+
+                <input class="form-control time-div" placeholder="yyyy-mm-dd" name="dpend" [(ngModel)]="EndDatepickerModel"
+                  ngbDatepicker #end="ngbDatepicker">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary btn-lg" (click)="end.toggle()" type="button">
+                    <img src="../../../assets/images/calendar.svg">
+                  </button>
+                </div>
+
               </div>
               <div class="input-group kitchen-div">
                 <button type="button" (click)="kitchenSelect()" class="btn btn-lg btn-primary">Report</button>
@@ -23,10 +33,56 @@
             </div>
           </form>
         </div>
-
       </div>
     </div>
     <div [ngClass]="showReport">
+      <div class="row header-report">
+        <div class="card shadow p-3 mb-5 bg-white rounded card-summary">
+          <div class="card-body">
+            <h4 class="card-title">ລວມຍອດຂາຍ</h4>
+            <h6 class="card-subtitle mb-2 text-muted">ຍອດຂາຍປະຈຳວັນ</h6>
+            <div class="display-4">
+              {{ grandTotal | number }}
+            </div>
+          </div>
+        </div>
+        <div class="card shadow p-3 mb-5 bg-white rounded card-summary">
+          <div class="card-body">
+            <h4 class="card-title">ລວມຍອດຕົ້ນທຶນ</h4>
+            <h6 class="card-subtitle mb-2 text-muted">ຕົ້ນທຶນປະຈຳວັນ</h6>
+            <div class="display-4">
+              {{ costTotal | number }}
+            </div>
+          </div>
+        </div>
+        <div class="card shadow p-3 mb-5 bg-white rounded card-summary">
+          <div class="card-body">
+            <h4 class="card-title">ກຳໄລ</h4>
+            <h6 class="card-subtitle mb-2 text-muted">ລາຍຮັບສຸທິ</h6>
+            <div class="display-4">
+              {{ grandTotal - costTotal | number }}
+            </div>
+          </div>
+        </div>
+        <div class="card shadow p-3 mb-5 bg-white rounded card-summary user-div">
+          <div class="card-body">
+            <h4 class="card-title no-wrap">ຕາມພະນັກງານຂາຍ</h4>
+            <h6 class="card-subtitle mb-2 text-muted">ລາຍຮັບສຸທິ</h6>
+            <div *ngFor="let user of reportUsers">
+              <div class="row">
+                <div class="col col-sm-6">
+                  <h5>{{ user.username }}</h5>
+                </div>
+                <div class="col col-sm-6">
+                  <h5 class="text-right">{{ user.total |number }}</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
       <div class="card-body">
         <div class="row">
           <div class="col col-md-4">
@@ -55,7 +111,8 @@
                   <tfoot>
                     <tr>
                       <td colspan="2">ລວມ</td>
-                      <td class="text-right"></td>
+                      <td class="text-right"><strong>{{ costTotal | number }}</strong></td>
+                      <td class="text-right"><strong>{{ grandTotal | number }}</strong></td>
                     </tr>
                   </tfoot>
                 </table>
@@ -94,7 +151,7 @@
               <div class="card-header">
                 ອາຫານທີ່ຍອດຈຳນວນການຂາຍສູງສຸດ
               </div>
-              <div class="card-body">
+              <div class="card-body reportByfood-div">
                 <table class="table">
                   <thead>
                     <tr>
