update case load

--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -41,7 +41,7 @@
           <div class="card-body">
             <h4 class="card-title">ລວມຍອດຂາຍ</h4>
             <h6 class="card-subtitle mb-2 text-muted">ຍອດຂາຍປະຈຳວັນ</h6>
-            <div class="display-4">
+            <div class="display-4 text-right">
               {{ grandTotal | number }}
             </div>
           </div>
@@ -50,7 +50,7 @@
           <div class="card-body">
             <h4 class="card-title">ລວມຍອດຕົ້ນທຶນ</h4>
             <h6 class="card-subtitle mb-2 text-muted">ຕົ້ນທຶນປະຈຳວັນ</h6>
-            <div class="display-4">
+            <div class="display-4 text-right">
               {{ costTotal | number }}
             </div>
           </div>
@@ -59,7 +59,7 @@
           <div class="card-body">
             <h4 class="card-title">ກຳໄລ</h4>
             <h6 class="card-subtitle mb-2 text-muted">ລາຍຮັບສຸທິ</h6>
-            <div class="display-4">
+            <div class="display-4 text-right">
               {{ grandTotal - costTotal | number }}
             </div>
           </div>
