--- a/src/app/pages/cashdrawer-manager/cashdrawer-manager.component.html
+++ b/src/app/pages/cashdrawer-manager/cashdrawer-manager.component.html
@@ -1,18 +1,32 @@
 <div class="container">
   <form [formGroup]="cashloadForm">
-    <div class="card">
+    <div class="card" [ngClass]="showLoadBox">
       <div class="card-header bg-dark">
         <a class="h6">ເອົາເງິນເຂົ້າ Cashdrawer</a>
       </div>
       <div class="card-body">
+        <div class="form-group row">
+          <label for="startAmounttxt" class="col-sm-3 col-form-label">ເອົາເງິນເຂົ້າ Drawer ຈຳນວນ</label>
+          <div class="col-sm-6">
+            <input type="number" class="form-control" id="startAmounttxt" step="10000" [disabled]="start_amount_disabled"
+              formControlName="startamount" placeholder="ຈຳນວນ ໜ້ອຍສຸດ 100,000 ກີບ" (keyup)="loadCashAmountChange($event.target.value)">
+          </div>
+          <div class="
+              col-sm-3">
+            <button type="button" [disabled]="!btnDisabled" (click)="processLoadCash()" class="btn btn-primary">ບັນທຶກເງິນສົດ</button>
+          </div>
+        </div>
 
         <div class="form-group row">
-          <label for="startAmounttxt" class="col-sm-3 col-form-label">ເອົາເງິນເຂົ້າ ຈຳນວນ</label>
+          <label for="userselect" class="col-sm-3 col-form-label">ຜູ້ກວດສອບ</label>
           <div class="col-sm-6">
-            <input type="number" class="form-control" id="startAmounttxt" step="10000" placeholder="ຈຳນວນ" (keyup)="loadCashAmountChange($event.target.value)">
+            <select class="form-control" id="userselect" [disabled]="usersSelectDisabled" (change)="usersSelectChange($event)">
+              <option disabled value="">---------------------</option>
+              <option value="{{ user.id }}" *ngFor="let user of users">{{ user.username |uppercase }}</option>
+            </select>
           </div>
           <div class="col-sm-3">
-            <button type="button" [disabled]="!btnDisabled" (click)="processLoadCash()" class="btn btn-primary">ບັນທຶກເງິນສົດ</button>
+            <button type="button" (click)="approveUser()" [disabled]="btnApproveDisabled " class="btn btn-warning">Approved</button>
           </div>
         </div>
 
@@ -23,27 +37,28 @@
         <div class="form-group row">
           <label for="saleTotalAmount" class="col-sm-3 col-form-label">ຍອດຂາຍລ່າສຸດ</label>
           <div class="col-sm-6">
-            <input type="number" readonly class="form-control" id="saleTotalAmount" placeholder="Auto populate ...">
+            <input type="number" readonly class="form-control" id="saleTotalAmount" formControlName="settleAmount"
+              placeholder="Auto populate ...">
           </div>
           <div class="col-sm-3">
-            <button type="button" class="btn btn-danger">ປິດການຂາຍຂອງວັນ</button>
+            <button type="button" class="btn btn-danger" (click)="settle()">ປິດການຂາຍຂອງວັນ</button>
           </div>
         </div>
         <div class="form-group row">
-          <label for="saleTotalAmount" class="col-sm-3 col-form-label">ຈຳນວນເງິນທີ່ຍັງໃນ Drawer</label>
+          <label for="currentAmount" class="col-sm-3 col-form-label">ຈຳນວນເງິນທີ່ຍັງໃນ Drawer</label>
           <div class="col-sm-6">
-            <input type="number" class="form-control" id="saleTotalAmount" step="10000">
+            <input type="number" class="form-control" id="currentAmount" step="10000" formControlName="currentAmount"
+              (keyup)="remainingCashInDrawer($event.target.value)">
           </div>
         </div>
         <div class="form-group row">
-          <label for="saleTotalAmount" class="col-sm-3 col-form-label">ຍອດເງິນຫຼັງປິດການຂາຍຂອງວັນ</label>
+          <label for="netAmount" class="col-sm-3 col-form-label">ຍອດເງິນຫຼັງປິດການຂາຍຂອງວັນ</label>
           <div class="col-sm-6">
-            <input type="number" readonly class="form-control" id="saleTotalAmount" step="10000">
+            <input type="number" readonly class="form-control" id="netAmount" step="10000" formControlName="balance">
           </div>
         </div>
         <div class="form-group row">
           <div class="col-sm-3">
-
           </div>
           <div class="col-sm-6">
             <button type="button" class="btn btn-lg btn-primary">ບັນທຶກເງິນສົດ</button>
