--- a/src/app/dialogs/common-dialog/common-dialog.component.css
+++ b/src/app/dialogs/common-dialog/common-dialog.component.css
@@ -8,3 +8,9 @@
 .hidden {
   display: none;
 }
+.noteSuggests-div {
+  background-color: aquamarine;
+  height: 200px;
+  overflow-y: auto;
+  z-index: 1;
+}
