--- a/src/app/pages/pos/pos.component.html
+++ b/src/app/pages/pos/pos.component.html
@@ -78,9 +78,10 @@
       <div class="card payment-card">
         <div class="card-body">
           <div class="row">
-            <div class="col col-md-12 text-center"><button type="button" [disabled]="!paymentReady" (click)="openPaymentForm()"
+            <div class="col col-md-6 text-center"><button type="button" [disabled]="!paymentReady" (click)="openPaymentForm()"
                 class="btn btn-lg btn-success btn-block">ຈ່າຍເງິນສົດ</button></div>
-
+            <div class="col col-md-6 text-center"><button type="button" [disabled]="!paymentReady" (click)="openQRCodePayment()"
+                class="btn btn-lg btn-primary btn-block">ຈ່າຍ QR code</button></div>
           </div>
         </div>
       </div>
