--- a/src/app/payments/payment-confirm/payment-confirm.component.html
+++ b/src/app/payments/payment-confirm/payment-confirm.component.html
@@ -13,7 +13,7 @@
     <div class="card">
       <div class="card-body">
         <form [formGroup]="paymentForm">
-          <div class="form-group row">
+          <div class="form-group row" style="display: none;">
             <label for="customerSelect" class="col-sm-2 col-form-label">ລູກຄ້າ</label>
             <div class="col-sm-10">
               <select id="customerSelect" required class="form-control" (change)="customerIdChange($event.target.value)">
